# SCOSpy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
SCOS/: SCOS.py
SCOSpy.egg-info/: PKG-INFO  SOURCES.txt
src/SCOS/: SCOS.py
src/SCOSpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
